Now supporting reading classpath resources (classpath:filename scheme)